<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/daily_summary_button"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:text="@string/daily_summary_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/history_button"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:text="@string/history_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_message_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_message_nonedit_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <GridLayout
            android:id="@+id/emoticon_gridlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:layout_weight="0.3"
            android:columnCount="2"
            android:rowCount="4">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="15sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="15sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="15sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="15sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="15sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="15sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="15sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="15sp" />

        </GridLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1.1">

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_button_text"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>